--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     height: 100vh;
     width: 100%;
-    background-image: url(/IMAGES/kvb-bg1.jpg) !important;
+    background-image: url(../IMAGES/kvb-bg1.jpg) !important;
     background-size: cover;
     background-position: center;
 }
