--- a/CSS/about-us.css
+++ b/CSS/about-us.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url(/IMAGES/kvb-bg4.webp) !important;
+    background-image: url(../IMAGES/kvb-bg4.webp) !important;
     filter: contrast(1);
     background-size: cover;
     background-position: center;
