--- a/CSS/services.css
+++ b/CSS/services.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
     text-transform: capitalize;
-    background-image: url(/IMAGES/kvb-bg2.jpg) !important;
+    background-image: url(../IMAGES/kvb-bg2.jpg) !important;
     background-size: cover;
     background-position: center;
 }
