--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-image: url(/IMAGES/kvb-bg3.jpg);
+    background-image: url(../IMAGES/kvb-bg3.jpg);
     background-position: center;
     background-size: cover;
     
