--- a/CSS/register.css
+++ b/CSS/register.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-image: url(/IMAGES/kvb-bg4.webp);
+    background-image: url(../IMAGES/kvb-bg4.webp);
     background-position: center;
     background-size: cover;
    
