--- a/CSS/register.css
+++ b/CSS/register.css
@@ -6,7 +6,7 @@
     background-image: url(../IMAGES/kvb-bg4.webp);
     background-position: center;
     background-size: cover;
-   
+    background-repeat: no-repeat;
     
 }
 
