--- a/CSS/register.css
+++ b/CSS/register.css
@@ -1,7 +1,15 @@
-    body {
+/*  service page css */
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    height: 100%;
+    width: 100%;
     box-sizing: border-box;
     background-image: url(../IMAGES/kvb-bg4.webp);
     background-position: center;
