--- a/CSS/register.css
+++ b/CSS/register.css
@@ -8,7 +8,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     box-sizing: border-box;
     background-image: url(../IMAGES/kvb-bg4.webp);
