--- a/CSS/register.css
+++ b/CSS/register.css
@@ -1,21 +1,13 @@
-/*  service page css */
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    height: 100vh;
-    width: 100%;
     box-sizing: border-box;
     background-image: url(../IMAGES/kvb-bg4.webp);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    
+   
 }
 
 header {
@@ -29,7 +21,7 @@ header {
 }
 #header{
     height: auto;
-    width: 100%;
+    width: 100vw;
 }
 header .logo img{
     height: 100px;
@@ -38,7 +30,7 @@ header .logo img{
    
 }
 nav{
-    mix-blend-mode:screen;
+    background: greenyellow;
     border-radius: 20px;
 
 }
@@ -62,13 +54,14 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: greenyellow;
+    background-color:rgb(0, 128, 0,.5);
     border-radius: 4px;
 }
 
 .container {
     height: 100%;
-    width: 100%;
+    width: 100vw;
+    max-width: 100vw;
     background: transparent;
     backdrop-filter: blur(10);
     border-radius: 10px;
@@ -229,6 +222,10 @@ footer {
 
 /* For tablets and smaller devices */
 @media (max-width: 768px) {
+nav{
+    width: 100px;
+    margin-right: 20px;
+}
 nav ul {
 flex-direction: column;
 align-items: center;
@@ -237,6 +234,9 @@ align-items: center;
 nav ul li {
 margin-left: 0;
 margin-bottom: 10px;
+}
+nav ul li a :hover{
+    background-color: rgb(0, 128, 0,.5);
 }
 .transaction-action{
     display: grid;
@@ -263,12 +263,11 @@ width: 100%;
 padding: 15px;
 }
 
-nav ul li a:hover {
-background-color: greenyellow;
-border-radius: 0;
+nav ul li a :hover{
+    background-color: rgb(0, 128, 0,.5);
+    border-radius: 0;
 }
 .transaction-action{
     display: grid;
 }
-
 }
