--- a/CSS/register.css
+++ b/CSS/register.css
@@ -7,6 +7,10 @@ body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
    
 }
 
@@ -22,6 +26,7 @@ header {
 #header{
     height: auto;
     width: 100vw;
+
 }
 header .logo img{
     height: 100px;
@@ -59,6 +64,8 @@ nav ul li a:hover {
 }
 
 .container {
+    margin:10px 50px !important;
+    padding: 10px !important;
     height: 100%;
     width: 100vw;
     max-width: 100vw;
@@ -122,10 +129,10 @@ button:hover {
 }
 
 #login{
-    margin-top: 120px;
+    margin-top: 110px !important;
 }
 #admin-login{
-    margin-top: 120px;
+    margin-top: 110px !important;
 }
 #statement {
     margin-top: 20px;
